# simple-boot

./: CMakeLists.txt  Makefile
arch/arm/aarch64/: CMakeLists.txt  boot.lds.S  main.c  runtime_exceptions.S  startup.S
driver/console/: CMakeLists.txt  console-core.c
driver/console/pl011/: CMakeLists.txt  pl011.c  pl011.h  pl011_aarch64.S  pl011_register.h
include/common/: asm_macro_utils.S  bitops.h  mmio.h
include/driver/console/: console.h
include/lib/arch/: generic_timer.h  sysreg.h
include/lib/arch/arm/aarch64/: aarch64_asm_macro_util.S  aarch64_sysreg.h
include/lib/arch/arm/aarch64/register/: address_translation.h  cache_maintenance.h  el2_tlb_maintenance.h  exception_handling.h  generic_timer.h  gic_system.h  identification.h  implementation_defined.h  miscellaneous.h  other_sytem_control.h  performance_monitor.h  process_status.h  reset.h  secure.h  thread.h  tlb_maintenance.h  virtual_memory_control.h  virtualization.h
include/lib/libc/: assert.h  cdefs.h  printf.h  stdio.h
include/platform/: platform.h
include/platform/qemu-aarch64/: platform_def.h
lib/: CMakeLists.txt
lib/arch/: CMakeLists.txt
lib/arch/arm/aarch32/: .gitkeep
lib/arch/arm/aarch64/: CMakeLists.txt
lib/arch/arm/aarch64/cache/: CMakeLists.txt  cache_helper.S
lib/arch/arm/aarch64/cpu/: CMakeLists.txt  cortex-a53.S
lib/arch/arm/aarch64/helper/: CMakeLists.txt  helper.S  helper.c  reset_helper.S
lib/arch/arm/aarch64/timer/: CMakeLists.txt  generic_timer.S  generic_timer.c  generic_timer_internal.h
lib/libc/: CMakeLists.txt  putchar.c  puts.c
lib/libc/arm/aarch64/: CMakeLists.txt  crt0.S  declare_stack.S  misc.S
lib/libc/printf/: CMakeLists.txt  printf.c  printf_config.h
platform/: CMakeLists.txt
platform/qemu-aarch64/: CMakeLists.txt  dummy.S  dummy.c  plat_cpu.S  plat_mem.S  platform_setup.c
scripts/cmake/gnu/: aarch64-none-elf.cmake
scripts/cmake/platform/: qemu-aarch64.cmake
scripts/cmake/soc/: corex-a53.cmake
